# ru-prompts

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  MANIFEST.in  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: on-push.yaml
api/callbacks/: index.html
api/pipelines/: index.html
api/preprocessing/: index.html
api/prompt/: index.html
api/prompt_format/: index.html
api/prompt_provider/: index.html
conf/: config.yaml
conf/backbone/: rugpt3large.yaml  rugpt3medium.yaml  rugpt3small.yaml
conf/callbacks/: freeze_transformer_unfreeze_prompt.yaml  reduce_checkpoint.yaml  save_pretrained_prompt.yaml  wb_log_hydra_config.yaml
conf/dataset/: default.yaml  from_csv.yaml  from_jsonl.yaml  from_local.yaml  from_tsv.yaml
conf/model/: default.yaml  gpt.yaml
conf/optimizer/: adamw.yaml
conf/preprocessing/: text2text.yaml
conf/prompt_format/: default.yaml
conf/prompt_provider/: lstm.yaml  tensor.yaml
conf/scheduler/: cosine_annealing_warm_restarts.yaml  (+1 more)
docs/: hooks.py  mkdocs.yml
hydra/: index.html
notebooks/: detox-russe-inference-pretrained.ipynb  detox-russe-train-hydra.ipynb  detox-russe-train-python.ipynb  pretrained-inference.ipynb  train-hydra-cli.ipynb
pretrained/: index.html
ruprompts/: __init__.py  callbacks.py  pipelines.py  preprocessing.py  prompt.py  prompt_embedding.py  prompt_format.py  prompt_provider.py
search/: search_index.json
tests/: conftest.py  test_pipelines.py  test_preprocessing.py  test_prompt.py  test_prompt_format.py  test_prompt_provider.py
tutorials/: index.html
(+35 files in other folders)
